
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_5__ ;
typedef struct TYPE_9__ TYPE_4__ ;
typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


typedef int waiter7 ;
typedef int waiter6 ;
struct TYPE_9__ {int prev; int next; } ;
struct TYPE_6__ {int prev; int next; } ;
struct TYPE_10__ {TYPE_4__ node_list; TYPE_1__ prio_list; } ;
struct TYPE_7__ {int prev; int next; } ;
struct TYPE_8__ {TYPE_2__ node_list; } ;
struct rt_mutex_waiter {TYPE_5__ list_entry; TYPE_3__ wait_list; } ;
struct rt_mutex {TYPE_5__ list_entry; TYPE_3__ wait_list; } ;
typedef int mutex ;


 struct rt_mutex_waiter* NODE_LIST_TO_WAITER (int ) ;
 int read_pipe (struct rt_mutex_waiter*,struct rt_mutex_waiter*,int) ;
 int write_pipe (struct rt_mutex_waiter*,struct rt_mutex_waiter*,int) ;

void fix_rt_mutex_waiter_list(struct rt_mutex *pmutex)
{
 struct rt_mutex_waiter *pwaiter6, *pwaiter7;
 struct rt_mutex_waiter waiter6, waiter7;
 struct rt_mutex mutex;
 if(!pmutex)
  return;
 read_pipe(pmutex, &mutex, sizeof(mutex));
 pwaiter6 = NODE_LIST_TO_WAITER(mutex.wait_list.node_list.next);
 if(!pwaiter6)
  return;
 read_pipe(pwaiter6, &waiter6, sizeof(waiter6));
 pwaiter7 = NODE_LIST_TO_WAITER(waiter6.list_entry.node_list.next);
 if(!pwaiter7)
  return;
 read_pipe(pwaiter7, &waiter7, sizeof(waiter7));

 waiter6.list_entry.prio_list.prev = waiter6.list_entry.prio_list.next;
 waiter7.list_entry.prio_list.next = waiter7.list_entry.prio_list.prev;
 mutex.wait_list.node_list.prev = waiter6.list_entry.node_list.next;
 waiter7.list_entry.node_list.next = waiter6.list_entry.node_list.prev;

 write_pipe(pmutex, &mutex, sizeof(mutex));
 write_pipe(pwaiter6, &waiter6, sizeof(waiter6));
 write_pipe(pwaiter7, &waiter7, sizeof(waiter7));
}
