; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_35370.c_fix_rt_mutex_waiter_list.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_35370.c_fix_rt_mutex_waiter_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt_mutex = type { %struct.TYPE_10__, %struct.TYPE_8__ }
%struct.TYPE_10__ = type { %struct.TYPE_9__, %struct.TYPE_6__ }
%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32, i32 }
%struct.rt_mutex_waiter = type { %struct.TYPE_10__, %struct.TYPE_8__ }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fix_rt_mutex_waiter_list(%struct.rt_mutex* %0) #0 {
  %2 = alloca %struct.rt_mutex*, align 8
  %3 = alloca %struct.rt_mutex_waiter*, align 8
  %4 = alloca %struct.rt_mutex_waiter*, align 8
  %5 = alloca %struct.rt_mutex_waiter, align 4
  %6 = alloca %struct.rt_mutex_waiter, align 4
  %7 = alloca %struct.rt_mutex, align 4
  store %struct.rt_mutex* %0, %struct.rt_mutex** %2, align 8
  %8 = load %struct.rt_mutex*, %struct.rt_mutex** %2, align 8
  %9 = icmp ne %struct.rt_mutex* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %74

11:                                               ; preds = %1
  %12 = load %struct.rt_mutex*, %struct.rt_mutex** %2, align 8
  %13 = bitcast %struct.rt_mutex* %12 to %struct.rt_mutex_waiter*
  %14 = bitcast %struct.rt_mutex* %7 to %struct.rt_mutex_waiter*
  %15 = call i32 @read_pipe(%struct.rt_mutex_waiter* %13, %struct.rt_mutex_waiter* %14, i32 24)
  %16 = getelementptr inbounds %struct.rt_mutex, %struct.rt_mutex* %7, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call %struct.rt_mutex_waiter* @NODE_LIST_TO_WAITER(i32 %19)
  store %struct.rt_mutex_waiter* %20, %struct.rt_mutex_waiter** %3, align 8
  %21 = load %struct.rt_mutex_waiter*, %struct.rt_mutex_waiter** %3, align 8
  %22 = icmp ne %struct.rt_mutex_waiter* %21, null
  br i1 %22, label %24, label %23

23:                                               ; preds = %11
  br label %74

24:                                               ; preds = %11
  %25 = load %struct.rt_mutex_waiter*, %struct.rt_mutex_waiter** %3, align 8
  %26 = call i32 @read_pipe(%struct.rt_mutex_waiter* %25, %struct.rt_mutex_waiter* %5, i32 24)
  %27 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %5, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call %struct.rt_mutex_waiter* @NODE_LIST_TO_WAITER(i32 %30)
  store %struct.rt_mutex_waiter* %31, %struct.rt_mutex_waiter** %4, align 8
  %32 = load %struct.rt_mutex_waiter*, %struct.rt_mutex_waiter** %4, align 8
  %33 = icmp ne %struct.rt_mutex_waiter* %32, null
  br i1 %33, label %35, label %34

34:                                               ; preds = %24
  br label %74

35:                                               ; preds = %24
  %36 = load %struct.rt_mutex_waiter*, %struct.rt_mutex_waiter** %4, align 8
  %37 = call i32 @read_pipe(%struct.rt_mutex_waiter* %36, %struct.rt_mutex_waiter* %6, i32 24)
  %38 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %5, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %5, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 0
  store i32 %41, i32* %44, align 4
  %45 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %6, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %45, i32 0, i32 1
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %6, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %49, i32 0, i32 1
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 1
  store i32 %48, i32* %51, align 4
  %52 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %5, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %52, i32 0, i32 0
  %54 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = getelementptr inbounds %struct.rt_mutex, %struct.rt_mutex* %7, i32 0, i32 1
  %57 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %57, i32 0, i32 0
  store i32 %55, i32* %58, align 4
  %59 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %5, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = getelementptr inbounds %struct.rt_mutex_waiter, %struct.rt_mutex_waiter* %6, i32 0, i32 0
  %64 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %63, i32 0, i32 0
  %65 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %64, i32 0, i32 1
  store i32 %62, i32* %65, align 4
  %66 = load %struct.rt_mutex*, %struct.rt_mutex** %2, align 8
  %67 = bitcast %struct.rt_mutex* %66 to %struct.rt_mutex_waiter*
  %68 = bitcast %struct.rt_mutex* %7 to %struct.rt_mutex_waiter*
  %69 = call i32 @write_pipe(%struct.rt_mutex_waiter* %67, %struct.rt_mutex_waiter* %68, i32 24)
  %70 = load %struct.rt_mutex_waiter*, %struct.rt_mutex_waiter** %3, align 8
  %71 = call i32 @write_pipe(%struct.rt_mutex_waiter* %70, %struct.rt_mutex_waiter* %5, i32 24)
  %72 = load %struct.rt_mutex_waiter*, %struct.rt_mutex_waiter** %4, align 8
  %73 = call i32 @write_pipe(%struct.rt_mutex_waiter* %72, %struct.rt_mutex_waiter* %6, i32 24)
  br label %74

74:                                               ; preds = %35, %34, %23, %10
  ret void
}

declare dso_local i32 @read_pipe(%struct.rt_mutex_waiter*, %struct.rt_mutex_waiter*, i32) #1

declare dso_local %struct.rt_mutex_waiter* @NODE_LIST_TO_WAITER(i32) #1

declare dso_local i32 @write_pipe(%struct.rt_mutex_waiter*, %struct.rt_mutex_waiter*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
